[gd_scene load_steps=10 format=3 uid="uid://d2mjce8kte8x4"]

[ext_resource type="Shader" path="res://scripts/graves.gdshader" id="1_ih13k"]
[ext_resource type="Script" path="res://scripts/graves.gd" id="1_l8ryq"]
[ext_resource type="Texture2D" uid="uid://b8mk3giwfn3v2" path="res://Tiny Bard Art/Background 254px.png" id="1_m73t6"]
[ext_resource type="AudioStream" uid="uid://jthrewsh1n76" path="res://SFX/shovel_sound.mp3" id="2_2jgpt"]
[ext_resource type="Texture2D" uid="uid://bnoopd8pj7cgb" path="res://platformPack_item008.png" id="5_e5u8c"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_alodt"]
shader = ExtResource("1_ih13k")
shader_parameter/progress = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_n7yy0"]
atlas = ExtResource("1_m73t6")
region = Rect2(290, 59, 205, 164)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4t4kh"]
radius = 56.0
height = 160.0

[sub_resource type="Gradient" id="Gradient_ld2uk"]
colors = PackedColorArray(0.422008, 0.164812, 0.133035, 1, 0.931913, 0.809141, 0.985966, 1)

[node name="Graves" type="StaticBody2D" groups=["grave"]]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_l8ryq")

[node name="GraveSprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_alodt")
position = Vector2(24, 0)
texture = SubResource("AtlasTexture_n7yy0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-16, 0)
shape = SubResource("CapsuleShape2D_4t4kh")

[node name="shovel_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_2jgpt")

[node name="DirtParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(-16, -40)
emitting = false
amount = 50
lifetime = 0.5
texture = ExtResource("5_e5u8c")
emission_shape = 2
emission_sphere_radius = 45.0
direction = Vector2(0, 0)
spread = 5.0
gravity = Vector2(0, 150)
initial_velocity_min = 10.0
initial_velocity_max = 30.0
scale_amount_min = 0.25
color = Color(0.260207, 0.0647207, 0.0300678, 1)
color_ramp = SubResource("Gradient_ld2uk")
